# darts-plus-embedded

./: .gitignore  README.md  platformio.ini
dart-plus/: CMakeLists.txt
dart-plus/code/: ClassicGame.hpp  Game.hpp  GameStyle.hpp  ModeGame.hpp  Player.hpp  main.cpp
dart-plus/docs/: game.puml
esp/src/: main.cpp
lib/DartEngine/: ClassicGame.hpp  ExtendClassicGame.hpp  Game.hpp  GameSettings.hpp  GameStyle.hpp  ModeGame.hpp  Player.hpp  RandomShotGame.hpp  Round.hpp
lib/DartEngine/docs/: example.cpp  example2.cpp  game.puml
lib/DartEngine/test/: CMakeLists.txt  test.cpp
lib/Memory/: Memorable.hpp  MemorableWifi.cpp  MemorableWifi.hpp  README.md  Wifi.hpp
lib/Memory/examples/read-write-wifi/: main.cpp
lib/button-control/: README.md
lib/button-control/inc/: button.hpp
lib/button-control/src/: button.cpp
lib/dart-game/: CMakeLists.txt  ClassicGame.hpp  ExtendClassicGame.hpp  Game.hpp  GameSettings.hpp  ModeGame.hpp  Player.hpp  RandomShotGame.hpp  main.cpp
lib/dart-game/docs/: game.puml
lib/dart-game/test/: CMakeLists.txt  test.cpp
lib/game-service/inc/: GameService.h
lib/lcd-new-display/: README  platformio.ini
lib/lcd-new-display/inc/: Lcd.hpp
lib/lcd-new-display/src/: Lcd.cpp  main.cpp
lib/memory-managment/inc/: Memorable.hpp
lib/nlohmann/: README
lib/oled-display/docs/: READ.me
lib/oled-display/inc/: Buttons.h  Display.h  Logo.h  logo.h
lib/oled-display/src/: main.cpp
lib/server-client/inc/: server-client.h
lib/server-client/src/: server-client.cpp
